--- a/src/app/components/entrepreneur-profile/entrepreneur-profile.component.html
+++ b/src/app/components/entrepreneur-profile/entrepreneur-profile.component.html
@@ -6,7 +6,7 @@
 
             <div class="section-title">
                 <h2>About Us</h2>
-                <p>{{misObjetos.description}}</p>
+                <p>{{company.description}}</p>
             </div>
             <div class="justify-content-center">
                 <img src="../../../assets/img/empanadas-local.jpg" class="col-lg-12 col-sm-12 col-md-8 py-1">
@@ -34,7 +34,7 @@
                         <i class="bi bi-emoji-smile"></i>
                         <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1"
                               class="purecounter"></span>
-                        <p><strong>NIT <br> </strong>{{misObjetos.nit}}</p>
+                        <p><strong>NIT <br> </strong>{{company.nit}}</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
@@ -42,7 +42,7 @@
                         <i class="bi bi-journal-richtext"></i>
                         <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1"
                               class="purecounter"></span>
-                        <p><strong>Address <br></strong>{{misObjetos.address}}</p>
+                        <p><strong>Address <br></strong>{{company.address}}</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
@@ -50,7 +50,7 @@
                       <i class="bi bi-globe"></i>
                       <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1"
                             class="purecounter"></span>
-                      <p><strong>Web domain <br></strong>{{misObjetos.web_domain}}</p>
+                      <p><strong>Web domain <br></strong>{{company.web_domain}}</p>
                   </div>
               </div>
 
@@ -58,7 +58,7 @@
                   <div class="count-box">
                     <i class="bi bi-headset"></i>
                     <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Mail <br></strong> {{misObjetos.email}} </p>
+                    <p><strong>Mail <br></strong> {{company.email}} </p>
                   </div>
                 </div> 
                 <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
@@ -66,7 +66,7 @@
                         <i class="bi bi-telephone-fill"></i>
                         <span data-purecounter-start="0" data-purecounter-end="32550" data-purecounter-duration="1"
                               class="purecounter"></span>
-                        <p><strong>Contact <br></strong> {{misObjetos.contact_number}}</p>
+                        <p><strong>Contact <br></strong> {{company.contact_number}}</p>
                     </div>
                 </div>
             </div>
