--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -29,6 +29,11 @@
                     </a>
                 </li>
                 <li>
+                    <a routerLink="/main-page" class="nav-link scrollto" routerLinkActive="active">
+                        <i class="bi bi-house-door"></i> <span>main Page</span>
+                    </a>
+                </li>
+                <li>
                     <a routerLink="/entrepreneur-create" class="nav-link scrollto" routerLinkActive="active">
                         <i class="bx bx-plus"></i> <span>Create</span>
                     </a>
@@ -59,6 +64,11 @@
                 <li>
                     <a routerLink="/influencer-profile" class="nav-link scrollto" routerLinkActive="active">
                         <i class="bx bx-user"></i> <span>About us</span>
+                    </a>
+                </li>
+                <li>
+                    <a routerLink="/main-page" class="nav-link scrollto" routerLinkActive="active">
+                        <i class="bi bi-house-door"></i> <span>main Page</span>
                     </a>
                 </li>
                 <li>
