--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,10 +1,163 @@
 <main id="main">
 
-   <form action="javascript:" class="search-bar">
-	<input type="search" name="search" pattern=".*\S.*" required>
-	<button class="search-btn" type="submit">
-		<span>Search</span>
-	</button>
-    </form>
+	<div class="col-md-12" style=
+	"background: -webkit-linear-gradient(right, #3931af, #00c6ff); 
+	position: fixed;
+	z-index: 1;">
+		<form action="javascript:" class="search-bar">
+			<input type="search" name="search" pattern=".*\S.*" required>
+			<button class="search-btn" type="submit">
+				<span>Search</span>
+			</button>
+			</form>
+		 <img class="logo" src="assets/img/Logo_blanco.png" alt="INCO logo">
+	</div>
+
+	<div style="height: 120px;"></div>
+
+	<div  class="modal-body row">
+		<div class="col-md-4">
+			<div class="card-container">
+				<mat-card class="example-card">
+					<mat-card-header>
+					<div mat-card-avatar class="example-header-image"></div>
+					<mat-card-title>Shiba Inu</mat-card-title>
+					<mat-card-subtitle>Dog Breed</mat-card-subtitle>
+					</mat-card-header>
+					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+					<mat-card-content>
+					<p>
+						The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+						A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+						bred for hunting.
+					</p>
+					</mat-card-content>
+					<mat-card-actions>
+					<button mat-button>LIKE</button>
+					<button mat-button>SHARE</button>
+					</mat-card-actions>
+				</mat-card>
+			</div>
+
+			<div class="card-container">
+				<mat-card class="example-card">
+					<mat-card-header>
+					<div mat-card-avatar class="example-header-image"></div>
+					<mat-card-title>Shiba Inu</mat-card-title>
+					<mat-card-subtitle>Dog Breed</mat-card-subtitle>
+					</mat-card-header>
+					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+					<mat-card-content>
+					<p>
+						The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+						A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+						bred for hunting.
+					</p>
+					</mat-card-content>
+					<mat-card-actions>
+					<button mat-button>LIKE</button>
+					<button mat-button>SHARE</button>
+					</mat-card-actions>
+				</mat-card>
+			</div>
+		</div>
+
+		<div class="col-md-4">
+			<div class="card-container">
+				<mat-card class="example-card">
+					<mat-card-header>
+					<div mat-card-avatar class="example-header-image"></div>
+					<mat-card-title>Shiba Inu</mat-card-title>
+					<mat-card-subtitle>Dog Breed</mat-card-subtitle>
+					</mat-card-header>
+					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+					<mat-card-content>
+					<p>
+						The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+						A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+						bred for hunting.
+					</p>
+					</mat-card-content>
+					<mat-card-actions>
+					<button mat-button>LIKE</button>
+					<button mat-button>SHARE</button>
+					</mat-card-actions>
+				</mat-card>
+			</div>
+
+			<div class="card-container">
+				<mat-card class="example-card">
+					<mat-card-header>
+					<div mat-card-avatar class="example-header-image"></div>
+					<mat-card-title>Shiba Inu</mat-card-title>
+					<mat-card-subtitle>Dog Breed</mat-card-subtitle>
+					</mat-card-header>
+					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+					<mat-card-content>
+					<p>
+						The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+						A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+						bred for hunting.
+					</p>
+					</mat-card-content>
+					<mat-card-actions>
+					<button mat-button>LIKE</button>
+					<button mat-button>SHARE</button>
+					</mat-card-actions>
+				</mat-card>
+			</div>
+
+		</div>
+
+		<div class="col-md-4">
+			<div class="card-container">
+				<mat-card class="example-card">
+					<mat-card-header>
+					<div mat-card-avatar class="example-header-image"></div>
+					<mat-card-title>Shiba Inu</mat-card-title>
+					<mat-card-subtitle>Dog Breed</mat-card-subtitle>
+					</mat-card-header>
+					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+					<mat-card-content>
+					<p>
+						The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+						A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+						bred for hunting.
+					</p>
+					</mat-card-content>
+					<mat-card-actions>
+					<button mat-button>LIKE</button>
+					<button mat-button>SHARE</button>
+					</mat-card-actions>
+				</mat-card>
+			</div>
+
+			<div class="card-container">
+				<mat-card class="example-card">
+					<mat-card-header>
+					<div mat-card-avatar class="example-header-image"></div>
+					<mat-card-title>Shiba Inu</mat-card-title>
+					<mat-card-subtitle>Dog Breed</mat-card-subtitle>
+					</mat-card-header>
+					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+					<mat-card-content>
+					<p>
+						The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+						A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+						bred for hunting.
+					</p>
+					</mat-card-content>
+					<mat-card-actions>
+					<button mat-button>LIKE</button>
+					<button mat-button>SHARE</button>
+					</mat-card-actions>
+				</mat-card>
+			</div>
+
+		</div>
+
+		
+	</div>
+
 
 </main>
