--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -68,7 +68,7 @@
                 </li>
                 <li>
                     <a routerLink="/main-page" class="nav-link scrollto" routerLinkActive="active">
-                        <i class="bi bi-house-door"></i> <span>main Page</span>
+                        <i class="bi bi-house-door"></i> <span>Main Page</span>
                     </a>
                 </li>
                 <li>
