--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -47,8 +47,13 @@
                     </a>
                 </li>
                 <li>
-                    <a routerLink="/entrepreneur-settings" class="nav-link scrollto" routerLinkActive="active">
-                        <i class="bx bx-wrench"></i> <span>Settings</span>
+                    <a routerLink="/entrepreneur-score" class="nav-link scrollto" routerLinkActive="active">
+                        <i class="bx bx-bar-chart-alt"></i> <span>Score</span>
+                    </a>
+                </li>
+                <li>
+                    <a routerLink="/contacts" class="nav-link scrollto" routerLinkActive="active">
+                        <i class="bi bi-people"></i> <span>Contacts</span>
                     </a>
                 </li>
                 <li>
@@ -77,6 +82,11 @@
                 <li>
                     <a routerLink="/influencer-score" class="nav-link scrollto" routerLinkActive="active">
                         <i class="bx bx-bar-chart-alt"></i> <span>Score</span>
+                    </a>
+                </li>
+                <li>
+                    <a routerLink="/contacts" class="nav-link scrollto" routerLinkActive="active">
+                        <i class="bi bi-people"></i> <span>Contacts</span>
                     </a>
                 </li>
                 <li>
