waitung card decoration

--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -67,27 +67,32 @@
         <h1>Waiting response</h1>
         <hr class="hr-3">
             <div class="row">
-                <div class="oval">
+                <div class="oval waiting row">
+                    <div class="col-6">
+                        <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
+                    </div>
+                    <div class="col-6">
+                        <h3>Dog ewfwefwef</h3>
+                        <p>Waiting...</p>
+                    </div>
+                </div>
+                <div class="oval waiting">
                     <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
                     <h3>Dogo</h3>
                 </div>
-                <div class="oval">
+                <div class="oval waiting">
                     <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
                     <h3>Dogo</h3>
                 </div>
-                <div class="oval">
+                <div class="oval waiting">
                     <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
                     <h3>Dogo</h3>
                 </div>
-                <div class="oval">
+                <div class="oval waiting">
                     <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
                     <h3>Dogo</h3>
                 </div>
-                <div class="oval">
-                    <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
-                    <h3>Dogo</h3>
-                </div>
-                <div class="oval">
+                <div class="oval waiting">
                     <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
                     <h3>Dogo</h3>
                 </div>
