--- a/src/app/components/contacts/contacts.component.css
+++ b/src/app/components/contacts/contacts.component.css
@@ -14,6 +14,12 @@ hr.hr-3 {
     border-top: 2px solid #000000;
   }
 
+h3{
+    font-size: 1.2vw;
+    word-wrap: break-word;
+    box-sizing: border-box;
+}
+
 .oval{
 
     width: 200px;
@@ -25,11 +31,12 @@ hr.hr-3 {
     margin: 2%;
     display: flex;
     align-items: center;
+
     
 }
 
 .oval:hover{
-    transition: all 0.6s;
+    transition: all 0.4s;
     box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
     top: -4px;
     border: 4px solid #3931af;
@@ -47,3 +54,23 @@ hr.hr-3 {
     border-radius: 50%;
     margin: 0 10% 0 10%; 
   }
+
+.waiting{
+    opacity: .5;
+}
+
+.waiting p{
+    display: none;
+}
+
+.waiting:hover{
+    transition: all 1s;
+    opacity: 1;
+}
+
+.waiting:hover p{
+    transition: all 1s;
+    display: inline;
+    color: #000000;
+    margin: 0 0 0 0;
+}
