--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -37,29 +37,38 @@
         <h1>Contact request</h1>
         <hr class="hr-3">
             <div class="row">
-                <div class="oval">
+                <div class="oval req">
+                    <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
+                    <h3>Dogo</h3>
+                    <div>
+                        <i class="bi bi-check-circle" id="confirm"></i>
+                    </div>
+                    <div>
+                        <i class="bi bi-x-circle " id="reject"></i>
+                    </div>
+                </div>
+                <div class="oval req">
                     <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
                     <h3>Dogo</h3>
                 </div>
-                <div class="oval">
+                <div class="oval req">
                     <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
                     <h3>Dogo</h3>
                 </div>
-                <div class="oval">
+                <div class="oval req">
                     <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
                     <h3>Dogo</h3>
                 </div>
-                <div class="oval">
+                <div class="oval req">
                     <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
                     <h3>Dogo</h3>
                 </div>
-                <div class="oval">
+                <div class="oval req">
                     <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
                     <h3>Dogo</h3>
-                </div>
-                <div class="oval">
-                    <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
-                    <h3>Dogo</h3>
+                    <div>
+
+                    </div>
                 </div>
             </div>
 
