--- a/src/app/components/contacts/contacts.component.css
+++ b/src/app/components/contacts/contacts.component.css
@@ -21,7 +21,6 @@ h3{
 }
 
 .oval{
-
     width: 200px;
     height: 100px;
     -moz-border-radius: 50px / 50px;
@@ -30,9 +29,7 @@ h3{
     border: 3px solid  #00c6ff;
     margin: 2%;
     display: flex;
-    align-items: center;
-
-    
+    align-items: center; 
 }
 
 .oval:hover{
@@ -42,7 +39,6 @@ h3{
     border: 4px solid #3931af;
     background-color: white;
     cursor: pointer;
-
 }
 
 .avatar{
@@ -53,7 +49,7 @@ h3{
     display: inline;
     border-radius: 50%;
     margin: 0 10% 0 10%; 
-  }
+}
 
 .waiting{
     opacity: .5;
@@ -74,3 +70,122 @@ h3{
     color: #000000;
     margin: 0 0 0 0;
 }
+
+.req:hover{
+    width: 350px;
+    height: 100px;
+}
+
+.req i{
+    font-size: xx-large;
+    display: none;
+}
+
+.req:hover i{
+    display: inline-block;
+    margin: 0 10px 0 40px; 
+    color: #3931af;  
+}
+
+#confirm:hover{
+    color: rgb(3, 185, 3);
+}
+
+#confirm:active{
+    color: rgb(3, 185, 3);
+
+}
+
+#reject:hover{
+    color: rgb(255, 0, 0);
+}
+
+#reject:active{
+    color: rgb(255, 0, 0);
+}
+
+
+@media (max-width: 1150px) {
+    .oval{
+        width: 300px;
+        height: 100px;
+    }
+  }
+
+
+
+@media (max-width: 1000px) {
+    .oval{
+        width: 300px;
+        height: 100px;
+    }
+    h3{
+        font-size: 3vw;
+    }
+
+    .req:hover i{
+        font-size: 4vw;
+        display: inline-block;
+        margin: 0 10px 0 25px; 
+    }
+  }
+
+
+  @media (max-width: 800px) {
+
+    h3{
+        font-size: 4vw;
+    }
+
+    .oval{
+        width: 600px;
+        height: 100px;
+    }
+
+    .req i{
+        font-size: 6vw;
+        display: inline-block;
+        margin: 0 10px 0 50px; 
+    }
+
+    .req:hover{
+        width: 600px;
+        height: 100px;
+    }
+
+    .req:hover i{
+        font-size: 6vw;
+        display: inline-block;
+        margin: 0 10px 0 50px; 
+    }
+  }
+
+@media (max-width: 400px) {
+
+    h3{
+        font-size: 5vw;
+    }
+
+    .oval{
+        width: 600px;
+        height: 100px;
+    }
+
+    .req i{
+        font-size: 6vw;
+        display: inline-block;
+        margin: 0 10px 0 30px; 
+    }
+
+    .req:hover{
+        width: 600px;
+        height: 100px;
+    }
+
+    .req:hover i{
+        font-size: 6vw;
+        display: inline-block;
+        margin: 0 10px 0 80px; 
+    }
+  }
+
