--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -41,54 +41,39 @@
                     <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
                     <h3>Dogo</h3>
                     <div>
-                        <i class="bi bi-check-circle" id="confirm"></i>
+                        <i class="bi bi-check-circle" id="confirm" onclick=""></i>
                     </div>
                     <div>
                         <i class="bi bi-x-circle " id="reject"></i>
                     </div>
                 </div>
                 <div class="oval req">
-                    <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
-                    <h3>Dogo</h3>
-                </div>
-                <div class="oval req">
-                    <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
-                    <h3>Dogo</h3>
-                </div>
-                <div class="oval req">
-                    <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
-                    <h3>Dogo</h3>
-                </div>
-                <div class="oval req">
-                    <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
-                    <h3>Dogo</h3>
-                </div>
-                <div class="oval req">
-                    <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
-                    <h3>Dogo</h3>
+                    <img src="https://www.biografiasyvidas.com/biografia/c/fotos/colon_willie.jpg" alt="Avatar" class="avatar">
+                    <h3>El gran varón</h3>
                     <div>
-
+                        <i class="bi bi-check-circle" id="confirm" onclick=""></i>
+                    </div>
+                    <div>
+                        <i class="bi bi-x-circle " id="reject"></i>
                     </div>
                 </div>
-            </div>
+                <div class="oval req">
+                    <img src="https://i.pinimg.com/474x/e7/1b/d3/e71bd3e52e16718a0e7ec2bc57346033.jpg" alt="Avatar" class="avatar">
+                    <h3>Kyaru</h3>
+                    <div>
+                        <i class="bi bi-check-circle" id="confirm" onclick=""></i>
+                    </div>
+                    <div>
+                        <i class="bi bi-x-circle " id="reject"></i>
+                    </div>
+                </div>
 
+
+            </div>
         <br>
         <h1>Waiting response</h1>
         <hr class="hr-3">
             <div class="row">
-                <div class="oval waiting row">
-                    <div class="col-6">
-                        <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
-                    </div>
-                    <div class="col-6">
-                        <h3>Dog ewfwefwef</h3>
-                        <p>Waiting...</p>
-                    </div>
-                </div>
-                <div class="oval waiting">
-                    <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
-                    <h3>Dogo</h3>
-                </div>
                 <div class="oval waiting">
                     <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
                     <h3>Dogo</h3>
