--- a/src/app/components/contacts/contacts.component.css
+++ b/src/app/components/contacts/contacts.component.css
@@ -15,13 +15,13 @@ hr.hr-3 {
   }
 
 h3{
-    font-size: 1.2vw;
+    font-size: 2vw;
     word-wrap: break-word;
     box-sizing: border-box;
 }
 
 .oval{
-    width: 200px;
+    width: 500px;
     height: 100px;
     -moz-border-radius: 50px / 50px;
     -webkit-border-radius: 50px / 50px;
@@ -55,9 +55,6 @@ h3{
     opacity: .5;
 }
 
-.waiting p{
-    display: none;
-}
 
 .waiting:hover{
     transition: all 1s;
@@ -71,21 +68,13 @@ h3{
     margin: 0 0 0 0;
 }
 
-.req:hover{
-    width: 350px;
-    height: 100px;
-}
+
 
 .req i{
-    font-size: xx-large;
-    display: none;
+    font-size: 3rem;
+    margin: 0 10px 0 60px;
 }
 
-.req:hover i{
-    display: inline-block;
-    margin: 0 10px 0 40px; 
-    color: #3931af;  
-}
 
 #confirm:hover{
     color: rgb(3, 185, 3);
@@ -104,88 +93,93 @@ h3{
     color: rgb(255, 0, 0);
 }
 
+@media (max-width: 1600px) {
 
-@media (max-width: 1150px) {
-    .oval{
-        width: 300px;
-        height: 100px;
-    }
-  }
-
-
-
-@media (max-width: 1000px) {
-    .oval{
-        width: 300px;
-        height: 100px;
-    }
     h3{
-        font-size: 3vw;
+        font-size: 1.5vw;
     }
 
-    .req:hover i{
-        font-size: 4vw;
-        display: inline-block;
-        margin: 0 10px 0 25px; 
+    .req i{
+        font-size: 2rem;
+        margin: 0 10px 0 50px;
     }
+
   }
 
+
+@media (max-width: 1400px) {
+    .oval{
+        width: 420px;
+    }
+
+    .req i{
+        font-size: 2rem;
+        margin: 0 10px 0 30px;
+    }
+
+  }
+
+  @media (max-width: 1000px) {
+    .oval{
+        width: 320px;
+    }
+
+    .req i{
+        font-size: 1.75rem;
+        margin: 0 10px 0 20px;
+    }
+
+  }
 
   @media (max-width: 800px) {
-
-    h3{
-        font-size: 4vw;
+    .oval{
+        width: 90%;
     }
 
-    .oval{
-        width: 600px;
-        height: 100px;
+    h3{
+        font-size: 3.7vw;
     }
 
     .req i{
-        font-size: 6vw;
-        display: inline-block;
-        margin: 0 10px 0 50px; 
+        font-size: 4.5vw;
+        margin: 0 10px 0 60px;
     }
 
-    .req:hover{
-        width: 600px;
-        height: 100px;
-    }
-
-    .req:hover i{
-        font-size: 6vw;
-        display: inline-block;
-        margin: 0 10px 0 50px; 
-    }
   }
 
-@media (max-width: 400px) {
-
-    h3{
-        font-size: 5vw;
+  @media (max-width: 450px) {
+    .oval{
+        width: 90%;
     }
 
-    .oval{
-        width: 600px;
-        height: 100px;
+    h3{
+        font-size: 7vw;
     }
 
     .req i{
-        font-size: 6vw;
-        display: inline-block;
-        margin: 0 10px 0 30px; 
+        font-size: 7vw;
+        margin: 0 10px 0 30px;
     }
 
-    .req:hover{
-        width: 600px;
-        height: 100px;
-    }
-
-    .req:hover i{
-        font-size: 6vw;
-        display: inline-block;
-        margin: 0 10px 0 80px; 
-    }
   }
 
+  @media (max-width: 400px) {
+    .oval{
+        width: 90%;
+    }
+    
+    .oval img{
+        display: none;
+    }
+
+    h3{
+        font-size: 10vw;
+        margin-left: 30px;
+    }
+
+    .req i{
+        font-size: 10vw;
+        margin: 0 10px 0 80%;
+    }
+
+  }
