--- a/src/app/components/main-page/main-page.component.css
+++ b/src/app/components/main-page/main-page.component.css
@@ -185,3 +185,8 @@ body {
 	background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
 	background-size: cover;
   }
+
+a{
+	text-decoration: none;
+	color: black;
+}
