--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -16,14 +16,14 @@
 	<div style="height: 120px;"></div>
 
 	<div  class="modal-body row">
-		<div class="col-md-4">
+		<div class="col-xs-12 col-sm-6 col-md-4">
 			<div class="card-container">
 				<mat-card class="example-card">
-					<mat-card-header>
+					<a routerLink="/show-profile" routerLinkActive="active"><mat-card-header>
 					<div mat-card-avatar class="example-header-image"></div>
 					<mat-card-title>Shiba Inu</mat-card-title>
 					<mat-card-subtitle>Dog Breed</mat-card-subtitle>
-					</mat-card-header>
+					</mat-card-header></a>
 					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
 					<mat-card-content>
 					<p>
@@ -33,129 +33,11 @@
 					</p>
 					</mat-card-content>
 					<mat-card-actions>
-					<button mat-button>LIKE</button>
-					<button mat-button>SHARE</button>
-					</mat-card-actions>
-				</mat-card>
-			</div>
-
-			<div class="card-container">
-				<mat-card class="example-card">
-					<mat-card-header>
-					<div mat-card-avatar class="example-header-image"></div>
-					<mat-card-title>Shiba Inu</mat-card-title>
-					<mat-card-subtitle>Dog Breed</mat-card-subtitle>
-					</mat-card-header>
-					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-					<mat-card-content>
-					<p>
-						The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-						A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-						bred for hunting.
-					</p>
-					</mat-card-content>
-					<mat-card-actions>
-					<button mat-button>LIKE</button>
-					<button mat-button>SHARE</button>
+					<button mat-button>MATCH</button>
 					</mat-card-actions>
 				</mat-card>
 			</div>
 		</div>
-
-		<div class="col-md-4">
-			<div class="card-container">
-				<mat-card class="example-card">
-					<mat-card-header>
-					<div mat-card-avatar class="example-header-image"></div>
-					<mat-card-title>Shiba Inu</mat-card-title>
-					<mat-card-subtitle>Dog Breed</mat-card-subtitle>
-					</mat-card-header>
-					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-					<mat-card-content>
-					<p>
-						The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-						A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-						bred for hunting.
-					</p>
-					</mat-card-content>
-					<mat-card-actions>
-					<button mat-button>LIKE</button>
-					<button mat-button>SHARE</button>
-					</mat-card-actions>
-				</mat-card>
-			</div>
-
-			<div class="card-container">
-				<mat-card class="example-card">
-					<mat-card-header>
-					<div mat-card-avatar class="example-header-image"></div>
-					<mat-card-title>Shiba Inu</mat-card-title>
-					<mat-card-subtitle>Dog Breed</mat-card-subtitle>
-					</mat-card-header>
-					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-					<mat-card-content>
-					<p>
-						The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-						A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-						bred for hunting.
-					</p>
-					</mat-card-content>
-					<mat-card-actions>
-					<button mat-button>LIKE</button>
-					<button mat-button>SHARE</button>
-					</mat-card-actions>
-				</mat-card>
-			</div>
-
-		</div>
-
-		<div class="col-md-4">
-			<div class="card-container">
-				<mat-card class="example-card">
-					<mat-card-header>
-					<div mat-card-avatar class="example-header-image"></div>
-					<mat-card-title>Shiba Inu</mat-card-title>
-					<mat-card-subtitle>Dog Breed</mat-card-subtitle>
-					</mat-card-header>
-					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-					<mat-card-content>
-					<p>
-						The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-						A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-						bred for hunting.
-					</p>
-					</mat-card-content>
-					<mat-card-actions>
-					<button mat-button>LIKE</button>
-					<button mat-button>SHARE</button>
-					</mat-card-actions>
-				</mat-card>
-			</div>
-
-			<div class="card-container">
-				<mat-card class="example-card">
-					<mat-card-header>
-					<div mat-card-avatar class="example-header-image"></div>
-					<mat-card-title>Shiba Inu</mat-card-title>
-					<mat-card-subtitle>Dog Breed</mat-card-subtitle>
-					</mat-card-header>
-					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-					<mat-card-content>
-					<p>
-						The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-						A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-						bred for hunting.
-					</p>
-					</mat-card-content>
-					<mat-card-actions>
-					<button mat-button>LIKE</button>
-					<button mat-button>SHARE</button>
-					</mat-card-actions>
-				</mat-card>
-			</div>
-
-		</div>
-
 		
 	</div>
 
