remove photo buttons

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -52,8 +52,8 @@
                     </a>
                 </li>
                 <li>
-                    <a (click)="logout()" class="nav-link scrollto">
-                        <i class="bi bi-power"></i> <span>Logout</span>
+                    <a routerLink="/entrepreneur-settings" class="nav-link scrollto" routerLinkActive="active">
+                        <i class="bx bx-wrench"></i> <span>Settings</span>
                     </a>
                 </li><li>
                     <a (click)="logout()" class="nav-link scrollto">
