--- a/src/app/components/influencer-settings/influencer-settings.component.html
+++ b/src/app/components/influencer-settings/influencer-settings.component.html
@@ -80,16 +80,6 @@
                     </div>
                 </div>
 
-                <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">User photo</p>
-                <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
-                    <input type="file" accept="image/png, image/gif, image/jpeg">
-                </div>
-
-                <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">influencer photo</p>
-                <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
-                    <input type="file" accept="image/png, image/gif, image/jpeg">
-                </div>
-
                 <div class="col-lg-12 d-md-flex align-items-md-stretch justify-content-md-end form-group mt-4">
                     <button type="submit" class="btn btn-primary btn-lg" [disabled]="!userForm.valid">
                         Update
@@ -101,6 +91,13 @@
                 <div class="form-group">
                     <label class="col-lg-12 d-md-flex align-items-md-stretch form-group"
                     for="Main_file">Actualizar foto de perfil</label>
+                    <input class="col-lg-12 d-md-flex align-items-md-stretch form-group"
+                    type="file" form_control_name="Main_file" name="Main_file" id="Main_file" 
+                    (change)="uploadImage($event)">
+                </div>
+                <div class="form-group">
+                    <label class="col-lg-12 d-md-flex align-items-md-stretch form-group"
+                    for="Main_file">Foto Banner</label>
                     <input class="col-lg-12 d-md-flex align-items-md-stretch form-group"
                     type="file" form_control_name="Main_file" name="Main_file" id="Main_file" 
                     (change)="uploadImage($event)">
