--- a/src/app/components/entrepreneur-create/entrepreneur-create.component.html
+++ b/src/app/components/entrepreneur-create/entrepreneur-create.component.html
@@ -3,31 +3,23 @@
   <!-- ======= About Section ======= -->
   <section id="about" class="about">
     <div class="container">
-
+      <form [formGroup]="entrepreneurForm" (ngSubmit)="submitForm()" ngNativeValidate>
       <div class="section-title">
         <h2>Create an entrepreneur</h2>
         <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
-          <label for="exampleFormControlFile1"><h3>Name</h3></label>
+          <input type="text" class="form-control" placeholder="Name *" formControlName="name">
         </div>
         <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <input type="text" class="form-control" placeholder="Description *" formControlName="description">
         </div>
-        <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
-          <label for="exampleFormControlFile1"><h3>Description</h3></label>
-        </div>
-        <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        </div>
-        <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
-          <label for="exampleFormControlFile1"><h3>Photo</h3></label>
-        </div>
-        <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
-          <input type="file" class="form-control-file" id="exampleFormControlFile1">
-        </div>
+        <!-- <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
+          <input type="text" class="form-control" placeholder="Photo *" formControlName="venture_picture">
+        </div> -->
         <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </div>
+    </form>
     </div>
   </section>
 </main>
