--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -6,7 +6,7 @@
     <div class="d-flex flex-column">
 
         <div class="profile">
-            <img src="https://inco-server.herokuapp.com/storage/{{user?.profile_picture}}" alt="" class="img-fluid rounded-circle">
+            <img src="http://127.0.0.1:8000/storage/{{user?.profile_picture}}" alt="" class="img-fluid rounded-circle">
             <h1 class="text-light"><a href="../../../index.html">{{ user?.name_user }}</a></h1>
             <div class="social-links mt-3 text-center">
 
