--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -14,22 +14,19 @@
 	</div>
 
 	<div style="height: 120px;"></div>
-
-	<div  class="modal-body row">
+	<div *ngIf="isInfluencer">
+	<div  class="modal-body row" *ngFor="let personaje of misObjetos2">
 		<div class="col-xs-12 col-sm-6 col-md-4">
 			<div class="card-container">
 				<mat-card class="example-card">
 					<a routerLink="/show-profile" routerLinkActive="active"><mat-card-header>
 					<div mat-card-avatar class="example-header-image"></div>
-					<mat-card-title>Shiba Inu</mat-card-title>
-					<mat-card-subtitle>Dog Breed</mat-card-subtitle>
+					<mat-card-title>{{personaje.name}}</mat-card-title>
 					</mat-card-header></a>
 					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
 					<mat-card-content>
 					<p>
-						The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-						A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-						bred for hunting.
+						{{personaje.description}}
 					</p>
 					</mat-card-content>
 					<mat-card-actions>
@@ -40,6 +37,30 @@
 		</div>
 		
 	</div>
-
+</div>
+<div *ngIf="isEntrepreneur">
+	<div  class="modal-body row" *ngFor="let personaje of misObjetos">
+		<div class="col-xs-12 col-sm-6 col-md-4">
+			<div class="card-container">
+				<mat-card class="example-card">
+					<a routerLink="/show-profile" routerLinkActive="active"><mat-card-header>
+					<div mat-card-avatar class="example-header-image"></div>
+					<mat-card-title>{{personaje.name_user}}</mat-card-title>
+					</mat-card-header></a>
+					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+					<mat-card-content>
+					<p>
+						{{personaje.description}}
+					</p>
+					</mat-card-content>
+					<mat-card-actions>
+					<button mat-button>MATCH</button>
+					</mat-card-actions>
+				</mat-card>
+			</div>
+		</div>
+		
+	</div>
+</div>
 
 </main>
