--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -15,8 +15,8 @@
 
 	<div style="height: 120px;"></div>
 	<div *ngIf="isInfluencer">
-	<div  class="modal-body row" *ngFor="let personaje of misObjetos2">
-		<div class="col-xs-12 col-sm-6 col-md-4">
+	<div  class="modal-body row">
+		<div class="col-xs-12 col-sm-6 col-md-4" *ngFor="let personaje of misObjetos2">
 			<div class="card-container">
 				<mat-card class="example-card">
 					<a routerLink="/show-profile" routerLinkActive="active"><mat-card-header>
@@ -39,8 +39,8 @@
 	</div>
 </div>
 <div *ngIf="isEntrepreneur">
-	<div  class="modal-body row" *ngFor="let personaje of misObjetos">
-		<div class="col-xs-12 col-sm-6 col-md-4">
+	<div  class="modal-body row">
+		<div class="col-xs-12 col-sm-6 col-md-4" *ngFor="let personaje of misObjetos">
 			<div class="card-container">
 				<mat-card class="example-card">
 					<a routerLink="/show-profile" routerLinkActive="active"><mat-card-header>
